<resources>
    <string name="app_name">Proyecto SaberPro G1</string>
    <string name="text_name">Name User</string>
    <string name="text_lastname">Last Name User</string>
    <string name="hint_lastname">Your Last Name</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="hint_password">Your password</string>
    <string name="txt_welcome">Welcome</string>
    <string name="text_menu">MAIN MENU</string>
    <string name="user">Jairo</string>
    <string name="txt_introduction">Introduction</string>
    <string name="lorem_ipsum">This is the summarize This is the summarize This is the summarize
        This is the summarize This is the summarize This is the summarize</string>
    <string name="txt_class1">Class1</string>
    <string name="txt_action_search">Search</string>
    <string name="txt_action_settings">Settings</string>
    <string name="txt_action_logout">Logout</string>
    <string name="txt_fab">Element Added</string>
    <string name="question">Question</string>
    <string name="university">Search Web Page University</string>
    <string name="logic">Select the logic game you want</string>
    <string name="hint_question">Write your question</string>
    <string name="answer">Answer</string>
    <string name="hint_answer">Write your correct answer</string>
    <string name="text_option1">Option 1</string>
    <string name="hint_option1">Write your incorrect answer 1</string>
    <string name="text_option2">Option 2</string>
    <string name="hint_option2">Write your incorrect answer 2</string>
    <string name="text_option3">Option 3</string>
    <string name="hint_option3">Write your incorrect answer 3</string>
    <string name="text_subject">Subject</string>
    <string name="hint_subject">Write the corresponding subject</string>


    <string name="check">Check</string>
    <string name="correct">Very good!</string>
    <string name="incorrect">Incorrect...</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="prev">Previous</string>

    <array name="all_questions">
        <item>What is the capital of Spain?;Lisboa;Paris;*Madrid;Roma</item>
        <item>What is the electrón?;Positive charge;*Negative charge;Neutral charge;Chemical charge</item>
        <item>What is the square root of 25?;4;*5;2;3</item>
    </array>

</resources>