<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@color/red_500"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="111dp"
            android:layout_height="71dp"
            android:src="@drawable/logoinstitucion" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_question"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edtAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_answer"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_option1"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edtOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_option1"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_option2"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edtOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_option2"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_option3"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edtOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_option3"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_subject"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edtSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_subject"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="onQuestion"
            android:text="SAVE QUESTION"/>

    </LinearLayout>

</LinearLayout>